feat: cut over documentation ownership
